page/sass/platform-overview.scss
.platform-overview {
  h2 {
    color: $gray-darker;
    font-size: $section-title-font-size;
    font-weight: $font-weight-bold;
  }

  .feature-list {
    margin-top: 70px;
    margin-bottom: 20px;
  }

  .feature {
    margin-right: auto;
    margin-left: auto;
    max-width: 315px;
    text-align: center;
    color: $off-gray;

    .feature-image {
      display: flex;
      flex-direction: row;
      align-items: flex-end;
      justify-content: center;
      margin-bottom: 50px;
      height: 116px;
    }

    .feature-text {
      margin-bottom: 50px;
      font-size: $font-size-small;

      @media (max-width: $screen-sm-min) {
        text-align: center;
      }
    }
  }
}

